# tulli-currency-converter

./: .env  .gitignore  LICENSE  Makefile  README.md  run
lib/bash/ad-hoc/: get-packages-per-box.sh
lib/bash/code-snippets/: parse-params.sh
lib/bash/funcs/: check-sudo-rights.sh  export-json-section-vars.sh  get-list-file-from-action.sh  get-packages-from-file.sh  get-security-groups-ids.sh  get-version-of-package-from-file.sh  load-lib-functions.sh  log.sh  parse-ini-section-vars.sh  pass-utils.sh  perform-apt-get-install.sh  perform-brew-install.sh  read-conf-section.sh  replace-line-in-file.sh  set-conf-files.sh  set-product-vars.sh  set-tgt-vars.sh  sync-time.sh
src/bash/run/: run.sh
src/bash/run/bootstrap/: provision-personal-vim-and-tmux-ops.sh
src/bash/run/ubuntu/: run.sh
src/bash/run/ubuntu/ubuntu-20.04.2-lts/: check-install-docker.func.sh  check-install-poetry-proj.func.sh  check-install-poetry.func.sh  morph-dir.func.sh  print-usage.func.sh  run-currency-converter.func.sh  (+4 more)
src/docker/devops/: Dockerfile
src/python/tulli-currency-converter/: __main__.py  poetry.toml  pyproject.toml  pytest.ini
src/python/tulli-currency-converter/lib/utils/biz/: tulli_currency_rates.py
src/python/tulli-currency-converter/src/hello_world/: app.py
src/python/tulli-currency-converter/src/hello_world/controllers/: hello_world_controller.py  tulli_currency_rates_controller.py
src/python/tulli-currency-converter/src/tulli_currency_converter/: app.py
src/python/tulli-currency-converter/src/tulli_currency_converter/controllers/: tulli_currency_rates_controller.py
