[tool.poetry]
name = "tulli-currency-converter"
version = "1.0.0"
description = "A proof of concept of the Python framework Tornado."
authors = ["Yordan Georgiev <ext-yordan.georgiev@posti.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tornado = "^6.1"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"
pylint = "^2.8.3"

[tool.poetry.scripts]
start = "src.tulli_currency_converter.app:start_server"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
